Fixed about page spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -165,7 +165,6 @@ div#incidentHeader {
 div#aboutPage {
     color: white;
     position: relative;
-    top: -100px;
     padding: 0 0 0 10px;
     font-size: 24px;
 }
